overflow fix + font family fix

--- a/style.css
+++ b/style.css
@@ -169,8 +169,8 @@ a {
     grid-column-end: 23;
     background-size: cover;
     border-radius: 8px;
-     overflow: scroll;
-     background-color: white;
+    overflow: auto;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
